name:                pipes-fluid
version:             0.1.0.0
synopsis:            Applicative instances that allows reactively combining 'Pipes.Producer's so that a value is yielded when either Producer yields a value.
description:         Please see README.md
homepage:            https://github.com/louispan/pipes-fluid#readme
license:             BSD3
license-file:        LICENSE
author:              Louis Pan
maintainer:          louis@pan.me
copyright:           2016 Louis Pan
category:            Control, Pipes
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pipes.Fluid.React
                     , Pipes.Fluid.ReactIO
                     , Pipes.Fluid.Sync
  build-depends:       base >= 4.7 && < 5
                     , constraints
                     , lens
                     , lifted-async
                     , monad-control
                     , pipes
                     , stm
                     , transformers
                     , transformers-base
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

executable pipes-fluid-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , async
                     , constraints
                     , lifted-async
                     , mmorph
                     , monad-control
                     , pipes
                     , pipes-fluid
                     , stm
                     , transformers
  default-language:    Haskell2010

test-suite pipes-fluid-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pipes-fluid
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/louispan/pipes-fluid
